# III-Drone-Mission

./: CMakeLists.txt  README.md  package.xml  px4_mode_test.cpp  serialization_test.cpp  system_test.cpp
behavior_trees/: charge_tree.xml  ftp_test.xml  hover_on_cable_tree.xml  land_on_cable_tree.xml  land_on_cable_tree_groot2.xml  land_test_tree.xml  leave_cable_tree.xml  models.xml  on_cable_tree.xml  opti_track_test_tree.xml  reach_cable_tree.xml  reach_cable_tree.xml.temp  takeoff_from_cable_tree.xml  takeoff_from_cable_tree_test.xml  takeoff_test_tree.xml  test_tree.xml  test_tree_ftp.xml  test_tree_fuc.xml  test_tree_hover.xml  test_tree_seq.xml  up_down_opti_track_test_tree.xml  up_down_opti_track_test_tree_2.xml  up_down_test_tree.xml  up_down_test_tree_2.xml
include/iii_drone_behavior/behavior/: port_types.hpp
include/iii_drone_behavior/behavior/action_nodes/: cable_landing_maneuver_action_node.hpp  cable_takeoff_maneuver_action_node.hpp  fly_to_object_maneuver_action_node.hpp  fly_to_position_maneuver_action_node.hpp  hover_by_object_maneuver_action_node.hpp  hover_maneuver_action_node.hpp  hover_on_cable_maneuver_action_node.hpp  pl_mapper_command_action_node.hpp
include/iii_drone_behavior/behavior/condition_nodes/: select_target_line_condition_node.hpp  verify_powerline_detected_condition_node.hpp
include/iii_drone_behavior/behavior/trees/: take_charging_position_tree.hpp
include/iii_drone_behavior/mission/continuous_mission_orchestrator_node/: continuous_mission_orchestrator_node.hpp  continuous_mission_orchestrator_node_configurator.hpp
include/iii_drone_behavior/px4/mode_executors/: generic_mode_executor.hpp
include/iii_drone_behavior/px4/modes/: maneuver_mode.hpp
include/iii_drone_mission/behavior/: port_types.hpp
include/iii_drone_mission/behavior/action_nodes/: cable_landing_maneuver_action_node.hpp  cable_takeoff_maneuver_action_node.hpp  find_powerline_waypoint_provider_action_node.hpp  fly_to_object_maneuver_action_node.hpp  fly_to_position_maneuver_action_node.hpp  get_powerline_overview_action_node.hpp  gripper_command_action_node.hpp  hover_by_object_maneuver_action_node.hpp  hover_maneuver_action_node.hpp  hover_on_cable_maneuver_action_node.hpp  log_message_action_node.hpp  maneuver_action_node.hpp  mode_executor_action_node.hpp  mode_executor_schedule_request_action_node.hpp  pl_mapper_command_action_node.hpp  powerline_waypoint_provider_action_node.hpp  update_powerline_overview_action_node.hpp
include/iii_drone_mission/behavior/condition_nodes/: get_gripper_alignment_yaw_condition_node.hpp  publish_powerline_waypoints_condition_node.hpp  select_target_line_condition_node.hpp  store_current_state_condition_node.hpp  target_provider_condition_node.hpp  verify_gripper_closed_condition_node.hpp  verify_powerline_detected_condition_node.hpp
include/iii_drone_mission/behavior/trees/: take_charging_position_tree.hpp  tree_executor.hpp  tree_provider.hpp
include/iii_drone_mission/mission/: mission_executor.hpp  mission_specification.hpp
include/iii_drone_mission/mission/mission_executor_node/: mission_executor_node.hpp
include/iii_drone_mission/mission/powerline_overview_provider_node/: powerline_overview_provider_node.hpp
include/iii_drone_mission/px4/: px4_handler.hpp
include/iii_drone_mission/px4/mode_executors/: generic_mode_executor.hpp
include/iii_drone_mission/px4/modes/: maneuver_mode.hpp  mode_provider.hpp
include/iii_drone_mission/px4/setpoints/: trajectory_setpoint.hpp
mission_specification/: mission_specification.yaml  mission_specification.yaml.ftp_test  mission_specification.yaml.opti_track  mission_specification.yaml.real  mission_specification_test.yaml
src/: px4_mode_test.cpp
src/behavior/: port_types.cpp
src/behavior/action_nodes/: cable_landing_maneuver_action_node.cpp  cable_takeoff_maneuver_action_node.cpp  find_powerline_waypoint_provider_action_node.cpp  fly_to_object_maneuver_action_node.cpp  fly_to_position_maneuver_action_node.cpp  get_powerline_overview_action_node.cpp  gripper_command_action_node.cpp  hover_by_object_maneuver_action_node.cpp  hover_maneuver_action_node.cpp  hover_on_cable_maneuver_action_node.cpp  log_message_action_node.cpp  maneuver_action_node.cpp  mode_executor_action_node.cpp  mode_executor_schedule_request_action_node.cpp  pl_mapper_command_action_node.cpp  powerline_waypoint_provider_action_node.cpp  update_powerline_overview_action_node.cpp
src/behavior/condition_nodes/: get_gripper_alignment_yaw_condition_node.cpp  publish_powerline_waypoints_condition_node.cpp  select_target_line_condition_node.cpp  store_current_state_condition_node.cpp  target_provider_condition_node.cpp  verify_gripper_closed_condition_node.cpp  verify_powerline_detected_condition_node.cpp
src/behavior/trees/: take_charging_position_tree.cpp  test_tree.cpp  tree_executor.cpp  tree_provider.cpp
src/mission/: mission_executor.cpp  mission_specification.cpp
src/mission/continuous_mission_orchestrator_node/: continuous_mission_orchestrator_node.cpp  continuous_mission_orchestrator_node_configurator.cpp
src/mission/mission_executor_node/: mission_executor_node.cpp
src/mission/powerline_overview_provider_node/: powerline_overview_provider_node.cpp
src/px4/: px4_handler.cpp
src/px4/mode_executors/: generic_mode_executor.cpp
src/px4/modes/: maneuver_mode.cpp  mode_provider.cpp
src/px4/setpoints/: trajectory_setpoint.cpp
test/: mission_specification_test.cpp
